# BezierFun

./: CMakeLists.txt
.cache/clangd/index/: main.cpp.D2020B032EB3182E.idx
headers/: animation.hpp  bezier.hpp  box.hpp  settings.hpp  splines.hpp  timeline.hpp  track.hpp
src/: bezier.cpp  main.cpp
